syntax = "proto3";

package com.wisc.raft.proto;

service SampleService{
  rpc appendEntries(SampleAppendEntriesRequest) returns (SampleAppendEntriesResponse);
}

message SampleLogEntry {
  optional sint64 term = 1;
  optional string index = 2;
  optional SampleCommand command = 3;
  optional string requestId = 4;

};

message SampleCommand {
  optional string commandType = 1;
  optional sint64 key = 2;
  optional sint64 value = 3;
};

message SampleAppendEntriesRequest {
  optional string leaderId = 1;
  optional sint64 term = 2;
  optional sint64 lastAppendedLogIndex = 3;
  optional sint64 lastAppendedLogTerm = 4;
  optional sint64 commitIndex = 5;
  repeated SampleLogEntry entries = 6;
  optional sint64 indexTracked = 7;
  optional sint64 lastAppliedIndex = 8;
};

message SampleAppendEntriesResponse {
  optional sint64 term = 1;
  optional bool success = 2;
  optional sint64 lastMatchIndex = 3;
  optional sint64 lastMatchTerm = 4;
};

message SampleServerConnect {
  optional sint32 server_id = 1;
  optional SampleEndpoint endpoint = 2;
};

message SampleEndpoint {
  optional string host = 1;
  optional sint32 port = 2;
};
